fixed scaling on mobile

--- a/src/components/Inquiry/inquiry.module.scss
+++ b/src/components/Inquiry/inquiry.module.scss
@@ -40,7 +40,7 @@
     opacity: 0;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 600px) {
     .bigText {
         font-size: 3rem;
     }
